# rqhbot

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
docs/: 01_INDEX.md  02_OVERVIEW.md  03_QUICK_START.md  04_CONFIG_GUIDE.md  05_API.md  06_PLUGIN_DEVELOPMENT.md
github-plugin/: README.md  cli.py  console_viewer.py  monitor_config.py  stream_writer.py
github-plugin/core/: commands.py  config.py  gatherer.py  labeler.py  poller.py  review.py  skills.py  webhook.py
plugins/: README.md
plugins/cultivation/: README.md  __init__.py  config.json  game.py  jingjie.json  main.py
plugins/github-plugin/: README.md  __init__.py  config.json  main.py  plugin.json  tracker.py
plugins/github-plugin/core/: __init__.py  agent_loop.py  api.py  closer.py  commands.py  commenter.py  llm.py  poller.py  review.py  store.py
plugins/group_summary/: __init__.py  main.py  plugin.json
plugins/joha/: __init__.py  main.py
plugins/joha/ai/: __init__.py  bot.py  classifier.py  clients.py  generator.py  providers.py
plugins/joha/config/: __init__.py  config.example.json
plugins/joha/config/infrastructure/: __init__.py  cache.py  logger.py
plugins/joha/config/managers/: __init__.py  config_manager.py  group_mode_config.py
plugins/joha/core/: README.md  __init__.py
plugins/joha/core/builders/: __init__.py  message_builder.py  message_queue.py
plugins/joha/core/handlers/: __init__.py  commands.py  message_handler.py  (+1 more)
plugins/joha/decision/: __init__.py  command_analyzer.py  cooldown.py  group_state.py  intent_classifier.py  reply_config.py  reply_decision.py
plugins/joha/managers/: __init__.py  admin.py  history_manager.py  personas.py  style_learner.py  user_profile.py
plugins/joha/scripts/: __init__.py  convert_txt_to_json.py  merge_knowledge_shards.py  migrate_knowledge.py
plugins/kinkus/: QwenAI.py  __init__.py  abcapi.py  csmsword.json  help.md  main.py  requirements.txt
plugins/kinkus/zm/: zimu.py
plugins/pintu/: __init__.py  config.json  config_manager.py  guide.txt  main.py  plugin.json  plugin.py
plugins/pintu/tupina/: desktop.ini
plugins/rqhmain/: __init__.py  abcapi.py  config.json  csys.json  help.md  main.py
plugins/rqhshen/: README.md  __init__.py  main.py  requirements.txt
plugins/rqhspeech/: README.md  __init__.py  archive_manager.py  command_handler.py  config.json  data_manager.py  main.py  monthly_ranking.py  plugin.json  speech_config.py
plugins/rqhwenda/: __init__.py  ans.json  answer_manager.py  fuzzy_ans.json  help.txt  main.py  plugin.json  plugin.py  precise_ans.json
plugins/statistics/: archive_manager.py  main.py  plugin.json  plugin.py  requirements.txt  speech_config.json
plugins/theme_diary/: __init__.py  main.py  plugin.json
sdk/: README.md  __init__.py  bot_client.py
sdk/config/: __init__.py  config.py
sdk/core/: __init__.py  api.py  client.py  emoji_map.py  event_bus.py  event_dispatcher.py  events.py  interfaces.py
sdk/pluginsystem/: __init__.py  plugin_base.py  plugin_manager.py
tests/: conftest.py  test_config.py  test_event_bus.py  test_events.py
(+13 files in other folders)
